Fix spacing and naming of profile sub-navigational elements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -365,6 +365,12 @@ body {
   margin-top: -107px;
 }
 
+#public-profile-hook:target {
+  padding-top: 0;
+  margin-top: 0;
+  position: relative;
+  top: -150px;
+}
 
 #sticky-profile strong {
   font-size: smaller;
